# bandcamp_async_api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: release-drafter.yml
.github/workflows/: checks.yml  codeql-analysis.yml  release_draft.yml  validate.yml
.run/: tests real data.run.xml  tests.run.xml
src/bandcamp_async_api/: __init__.py  client.py  models.py  parsers.py
test/: conftest.py  test_client.py  test_integration.py  test_models.py  test_parsers.py  test_suite.py
tests/: conftest.py  test_client.py  test_integration.py  test_models.py  test_parsers.py
tests/real_data/: README.md  __init__.py  constants.py  test_collection_methods.py  test_main_api.py  test_search_and_retrieval.py
