[project]
name = "bandcamp-async-api"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexey ALERT Rubashёff", email = "alexey.rubasheff@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
]
keywords = ["bandcamp", "api", "async"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
homepage = "https://github.com/ALERTua/bandcamp_async_api"
repository = "https://github.com/ALERTua/bandcamp_async_api"
documentation = "https://github.com/ALERTua/bandcamp_async_api"
"Bug Tracker" = "https://github.com/ALERTua/bandcamp_async_api/issues"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
max-line-length = 120
